# sploosh

./: Cargo.toml  README.md
.cargo/: config
src/: handlers.rs  lib.rs  main.rs  util.rs
static/: index.html
